--- a/trunk/APDL_tutorial.org
+++ b/trunk/APDL_tutorial.org
@@ -1,3 +1,6 @@
+# TODO
+# Extensibility, Emacs function help
+
 #+TITLE:     ANSYS-Mode APDL hands-on Tutorial
 #+AUTHOR:    Hans-Dieter Wilhelm
 #+EMAIL:     uidg1626@sbav104x
@@ -13,7 +16,6 @@
 #+LINK_UP:   
 #+LINK_HOME: 
 #+XSLT:
-
 #+PROPERTY: tangle yes
 
 * Introduction to ANSYS-Mode
@@ -56,66 +58,168 @@ Free, open, extensible
     (*C-c C-h*)
 ***  navigation (number blocks in .dat files) (*C-c {*)
 * Usage as APDL editor
-** Extensible code templates
-   - Open the file /APDL_tutorial.ansys/ with *C-x C-f*
-
 #+begin_src ansys :exports none
   !! This is the auto-generated APDL source of the ANSYS-Mode
   !! hands-on APDL tutorial (from APDL_tutorial.org)
   !! Copyright (C) 2006 - 2012 H. Dieter Wilhelm GPL V3
-
-  !@ --- Code templates ---
 #+end_src
-*** Inspect some code templates
+** Extensible code templates
+*** Open the APDL tutorial
+#+begin_src ansys
+   !! Open `APDL_tutorial.ansys' in the `site-lisp' folder "C-x C-f" 
+#+end_src
+*** Inspect the available code templates
    [[./template_menu.png]]
-
-    - Type *C-c C-s* and then *TAB* 
-
-    To see all templates (called skeletons in Emacs) in a preview
-    window.
-
-    [[./template_selection.png]]
-
 #+begin_src ansys :exports none
-  !! Inspect some code templates with C-c C-s and type TAB to
-  !! see all templates (called skeletons in Emacs) in a preview window.
+   !@ --- Code templates ---
 #+end_src
-*** Preview the function template ansys-skeleton-function 
-  Check out all available APDL functions (parametric and *get
-  functions)
-#+begin_src ansys exports: none  :tangle yes
-  !! Check out all available APDL functions (parametric and *get functions)
-  !! from the ansys-skeleton-function template with C-c C-s.
-#+end_src
-*** Choose the structural template for insertion *C-u C-c C-s* 
-    select the do this from ANSYS-Mode menu.  Insert the template below the following code
 #+begin_src ansys
-  !! Insert below this line the skeleton (C-u C-c C-s) ansys-structural-template
+   !! Type "C-c C-s" to trigger the template preview
+   !! and then the <TAB> key for a completion window
 #+end_src
-
-** Copy features
-*** List variable definitions *C-c C-v*
+    [[./template_selection.png]]
+*** Preview the APDL function template
+#+begin_src ansys :exports none
+  !@@ -- APDL parametric- and *get functions --
+#+end_src
+#+begin_src ansys
+  !! Check out all available APDL functions
+  !! Type "C-c C-s" and choose ansys-skeleton-function
+#+end_src
+*** Add some code template to the file
+#+begin_src ansys
+  !! Insert below the following line the ansys-structural-template
+  !! Type "C-u C-c C-s" to insert it directly into the file
+#+end_src
+After giving a short description, it should look like this:
+#+begin_src ansys :tangle no
+  !@ --- file header ---
+  !! ------------------------------
+  !! Time-stamp: <Sat Jun 23 02:47:11 2012>
+  !! ANSYS VERSION: 140
+  !! UNITS: mm-t-s
+  !! NOTE: template example
+  !! ------------------------------
+  ! fini
+  ! /clear
+  ! y
+  /units,mpa !indicate mm-t-s unit system
+  !@ --- Preprocessing ---
+  /prep7
+  !@@ -- Elements --
+  Steel = 1
+  ID = Steel
+  real = Steel
+  et,ID,solid186 !3d, 20 node
+  !@@ -- Material --
+  mp,nuxy,Steel,0.3 ! Poisson No
+  mp,ex,Steel,200000 ! Elastic modulus
+  !@@ -- Modeling --
+  block,0,1,0,1,0,1
+  !@@ -- Meshing --
+  vmesh,all
+  !@@ -- BCs, Loads --
+  nsel,s,loc,x,0
+  d,all,all
+  nsel,s,loc,x,1
+  d,all,uy,-.1
+  allsel
+  save
+  !@ --- Solving ---
+  /solu
+  solve
+  !@ --- Postprocessing --
+  /post1
+  plnsol,u,sum,2
+#+end_src
+*** APDL variable listing
+#+begin_src ansys :exports none
+  !@ --- List all variable definitions ---
+#+end_src
     rather not with very big, sys 60 MB ANSYS input files
-*** Copy above code with *C-c C-u*
-*** Copy code line or region with *C-c C-c*    
-#+begin_src ansys :tangle yes
-!@ --- Copy code ---
-!! apply C-c C-u, C-c C-c
+#+begin_src ansys
+  !! Type "C-c C-v" for a variable summary window of the current definitions
+#+end_src
+** Comments
+*** Commenting and uncommenting
+#+begin_src ansys :exports none
+  !@ --- Comments ---
+  !@ --- Commenting and uncommenting ---
+#+end_src
+#+begin_src ansys
+  !! Mark some text above (e. g. dragging the mouse with LMB)
+  !! and type "M-;"
+#+end_src
+#  1. Marking blocks: *C-M-h*
+#  2. Marking paragraphs: *M-h*
+# !!    selecting blocks C-M-a/b setting mark!
+After marking the whole paragraph with "M-h" and typing "M-;" above
+code should look like the following
+#+begin_src ansys :tangle no
+  !! !@ --- file header ---
+  !! !! ------------------------------
+  !! !! Time-stamp: <Sat Jun 23 02:47:11 2012>
+  !! !! ANSYS VERSION: 140
+  !! !! UNITS: mm-t-s
+  !! !! NOTE: template example
+  !! !! ------------------------------
+  !! ! fini
+  !! ! /clear
+  !! ! y
+  !! /units,mpa !indicate mm-t-s unit system
+  !! !@ --- Preprocessing ---
+  !! /prep7
+  !! !@@ -- Elements --
+  !! Steel = 1
+  !! ID = Steel
+  !! real = Steel
+  !! et,ID,solid186 !3d, 20 node
+  !! !@@ -- Material --
+  !! mp,nuxy,Steel,0.3 ! Poisson No
+  !! mp,ex,Steel,200000 ! Elastic modulus
+  !! !@@ -- Modeling --
+  !! block,0,1,0,1,0,1
+  !! !@@ -- Meshing --
+  !! vmesh,all
+  !! !@@ -- BCs, Loads --
+  !! nsel,s,loc,x,0
+  !! d,all,all
+  !! nsel,s,loc,x,1
+  !! d,all,uy,-.1
+  !! allsel
+  !! save
+  !! !@ --- Solving ---
+  !! /solu
+  !! solve
+  !! !@ --- Postprocessing --
+  !! /post1
+  !! plnsol,u,sum,2
 #+end_src
 
-** Commenting, uncommenting
-*** mark some text with the mouse and type *M-;* 
- 1. Marking blocks: *C-M-h*
- 2. Marking paragraphs: *M-h*
-!!    selecting blocks C-M-a/b setting mark!
-*** mark commented region again and type again *M-;*
-** Alignment of variable definitions
-
-*** place the cursor on the following paragraph and type *C-c C-a*
-
+*** Uncomment the code
 #+begin_src ansys
+  !! Mark above comments and retype "M-;"
+#+end_src
+*** Place inline comments (also named code comments)
+#+begin_src ansys :exports none
+   !@@ -- Code comments --
+#+end_src
+#+begin_src ansys
+  !! Type "M-j" somewhere in the following code line
+  nsel,s,loc,x,0,1
+#+end_src
+    *M-j* does the right thing and places a comment character behind
+     the code:
+#+begin_src ansys :tangle no
+  !! Type "M-j" somewhere in the following code line
+  nsel,s,loc,x,0,1         !
+#+end_src
+** Aligne your variable definitions
+#+begin_src ansys :exports none
 !@ --- Alignment of assignments ---
-!! place the cursor on the following paragraph and type C-c C-a
+#+end_src
+#+begin_src ansys
+!! Place the cursor on this paragraph and type "C-c C-a"
 x=0.4!laskd
 y= 33.0	    ! alskdl
 xzv= 9999990.3	    !!
@@ -129,12 +233,10 @@ kasd =3./0.4
 xxx =asin(3.0)
 y = cos(i)
 #+end_src
-
-the result looks like this, the numbers are aligned around the decimal dot
-
+The result looks like the code below, with the numbers aligned
+around the decimal point
 #+begin_src ansys :tangle no
-  !@ --- Alignment of assignments ---
-  !! place the cursor on the following paragraph and type C-c C-a
+  !! Place the cursor on this paragraph and type "C-c C-a"
   x       =       0.4         !laskd
   y       =      33.0         ! alskdl
   xzv     = 9999990.3         !!
@@ -148,110 +250,141 @@ the result looks like this, the numbers are aligned around the decimal dot
   xxx     =        asin(3.0)
   y       =        cos(i)
 #+end_src
-
 **  Completions (around 2000 ANSYS symbols)
     Case sensitive completions except for mouse completion
-#+begin_src ansys  :tangle yes
+#+begin_src ansys  :exports none
   !@ --- Completions ---
-  !! Check out all the APDL functions (parametric and *get functions)
-  !! from the ansys-skeleton-function template. Place the cursor behind
-  !! the 'c' character below and type ESC TAB.
+#+end_src
+#+begin_src ansys
+  !! Check out all APDL symbols, up to date with the latest ANSYS version
+  !! Place the cursor behind the 'c' character below and type "ESC TAB"
   c
 #+end_src
-  The complition window should look like this:
+  The complition window should look like:
 
       [[./completion.png]]
 
 # !mouse completion of vglue
 # vg
 *** Completion of functions
-    place the cursor behind 'ac' and type *M-TAB* (function names have
-    parentheses appended) and so on
-#+begin_src ansys : tangle yes
+#+begin_src ansys  :exports none
   !@@ -- Function completion --
-  !! place the cursor behind 'aco' and type *M-TAB* and so on
+#+end_src
+    Completed function names are getting their parentheses appended
+#+begin_src ansys
+  !! place the cursor behind 'aco' and type "M-TAB" and so on
   Pi = aco
   Pi = Sig
   Pi = ARNE
 #+end_src ansys
-    The completions are:
+    The completions unique in above examples and evaluate to:
 #+begin_src ansys : tangle no
-  !@@ -- Function completion --
-  !! place the cursor behind 'aco' and 'Aco' and type *M-TAB*
+  !! place the cursor behind 'aco' and type "M-TAB" and so on
   Pi = acos()
   Pi = Sign()
   Pi = ARNEXT()
 #+end_src ansys
 
-
-*** completion of element names type *M-TAB*
-#+begin_src ansys : tangle yes
-  !@@ -- Element name completion --
-  !! Completion of elements: typ M-TAB
+*** Completion of elements
+#+begin_src ansys  :exports none
+  !@@ -- Element completions --
+#+end_src
+#+begin_src ansys
+  !! Completion of element names: type "ESC TAB" behind `shell'
   shell
 #+end_src ansys
-*** Completion of APDL commands type *M-TAB*
-#+begin_src ansys : tangle yes
-  !@@ -- APDL command completion --
-  !! Completion of command names: typ M-TAB
+*** Completion of APDL commands
+#+begin_src ansys :exports none
+  !@@ -- APDL command completions --
+#+end_src ansys
+#+begin_src ansys
+  !! Completion of command names: type "ESC TAB" behind `ns'
   ns
 #+end_src ansys
-
 ** Abbreviations facility
+#+begin_src ansys :exports none
+  !@ --- ANSYS-Mode defined abbreviations ---
+#+end_src
 show the (locally) defined abbreviations with *C-u M-x list-abbrevs*
 *** Use the ANSYS-Mode abbreviations
-#+begin_src ansys : tangle yes
-  !@ --- Mode defined abbreviations ---
-  !! typ a SPACE behind the characters
-  `p   ! Pi assignment
-  `d   ! do loop abbreviation
+#+begin_src ansys
+  !! type a <SPACE> behind the following characters
+  `p                      ! Pi assignment
+  `d                      ! do loop abbreviation
 #+end_src
-*** Use dynamic abbreviation completion
-!!    type *M-/*
-!!    default (,) commands but most */ can't be "*repeated"
-#+begin_src ansys : tangle yes
+    The abbreviations should expand to:
+#+begin_src ansys :tangle no
+  !! type a <SPACE> behind the following characters
+  Pi=3.14159265359
+  ! Pi assignment
+  *do,I,1,10,1
+    
+  *cycle !bypass below commands in *do loop
+  *enddo
+  
+  ! do loop abbreviation
+#+end_src
+*** Use dynamic completion
+#+begin_src ansys :exports none
   !@ --- Dynamic abbreviations ---
+#+end_src
+# !!    type *M-/*
+# !!    default (,) commands but most */ can't be "*repeated"
+#+begin_src ansys
+  !! some code...
   very_long_Variable = 3
   vlV = 8
-#+end_src
-*** type *M-TAB* repeatedly behind the 'v'
-    (*ESC TAB* under Windows)
-#+begin_src ansys : tangle yes
-  !! typ a M-TAB behind the character
+  !!
+  !! type "M-/" repeatedly behind below character
    v
 #+end_src
-
+After the first *M-/*:
+#+begin_src ansys :tangle no
+  !! some code...
+  very_long_Variable = 3
+  vlV = 8
+  !!
+  !! type "ESC TAB" repeatedly behind below character
+   vlV
+#+end_src
+After the second *M-/*:
+#+begin_src ansys :tangle no
+  !! some code...
+  very_long_Variable = 3
+  vlV = 8
+  !!
+  !! type "ESC TAB" repeatedly behind below character
+   very_long_Variable
+#+end_src
 ** Closing of blocks, auto-indentation, dynamic variable fontification
-I 
-!(progn (setq ansys-highlighting-level 1 ansys-dynamic-highlighting-flag nil) (ansys-mode))
-!(progn (setq ansys-highlighting-level 2 ansys-dynamic-highlighting-flag t) (ansys-mode))
-
+# I 
+# !(progn (setq ansys-highlighting-level 1 ansys-dynamic-highlighting-flag nil) (ansys-mode))
+# !(progn (setq ansys-highlighting-level 2 ansys-dynamic-highlighting-flag t) (ansys-mode))
 ***  Ansys symbol completion and emacs expansion
      *C-c ]* -- -close-block
-#+begin_src  ansys : tangle yes
-*if,I,eq,1,then
-  c*** otto
-*elseif,I,le,10
-  /com,help me
-*else
-  /title,well well
+#+begin_src ansys :exports none
+   !@ --- Dynamic completion ---
 #+end_src
- 
-!C-c C-c, C-w copying lines, condensed input, default command
-#+begin_src ansys : tangle yes
-  x2 = 1 $ y2 = 1 $ z2 = 1 
-  immed,on                 !show graphics immediately
-  block,,x2,,y2,,z2
-       ,x2,2*x2,,2*y2,,2*z2 !default command line 
+#+begin_src ansys
+  *if,I,eq,1,then
+    c*** otto
+  *elseif,I,le,10
+    /com,help me
+  *else
+    /title,well well
+  
+  !! type in above line "C-c ]"
 #+end_src
-
-/pnum,line,1 $ lplo
-
-** materials & deprecated elements
-#+begin_src  ansys : tangle yes
-!! element types & deprecated element types
-et,Steel,beam3 $ et,Alu,shell91
-et,10,solid46
+     Voila
+#+begin_src ansys :tangle no
+  *if,I,eq,1,then
+    c*** otto
+  *elseif,I,le,10
+    /com,help me
+  *else
+    /title,well well
+  *endif
+  !! type in above line "C-c ]"
 #+end_src
 
 *** loading ANSYS help browser *C-c C-h*
@@ -277,17 +410,40 @@ Depth  = ARG1	  !ARG{1-9}, AR{10-19} = "*use" variables
     
 ** Solver communication
 
+** Copying to clipboard features
+*** Copy above code with *C-c C-u*
+#+begin_src ansys
+  !@ --- Copy to clipboard ---
+#+end_src
+*** Copy code line or region with *C-c C-c*    
+#+begin_src ansys :tangle yes
+!@ --- Copy code ---
+!! apply C-c C-u, C-c C-c
+#+end_src
+
 *** *C-c C-u*, *C-c C-c*
     have changed their meaning sending directly to the solver
 *** Write to the solver: *C-c C-q*
 
 *** *M-w* (copies line)
 
-*** code comments M-j
-#+begin_src ansys :tangle yes
-!@ --- Commenting out, un-commenting
-!! mark some paragraph M-h and apply M-;
+!C-c C-c, C-w copying lines, condensed input, default command
+#+begin_src ansys : tangle yes
+  x2 = 1 $ y2 = 1 $ z2 = 1 
+  immed,on                 !show graphics immediately
+  block,,x2,,y2,,z2
+       ,x2,2*x2,,2*y2,,2*z2 !default command line 
 #+end_src
+
+/pnum,line,1 $ lplo
+
+** materials & deprecated elements
+#+begin_src  ansys : tangle yes
+!! element types & deprecated element types
+et,Steel,beam3 $ et,Alu,shell91
+et,10,solid46
+#+end_src
+    
 
 ** Graphical feedback
 *** Open the interactive graphics window of ANSYS with *C-c C-g*
@@ -431,7 +587,3 @@ Thank you for your time
   !! mode : ansys
   !! end:
 #+end_src
-
-# local variables:
-# mode : org
-# end:
